--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <script src="lang.js"></script>
     <script src="protection.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Genial Design | Дизайн, Который Взрывает Алгоритмы YouTube</title>
-    <meta name="description" content="Обложки и названия для YouTube с гарантированным ростом просмотров. +167% средний рост. Более 10,000 обложек для топовых блогеров.">
+    <title>Genial Design | YouTube Thumbnails That Boost Your Views</title>
+    <meta name="description" content="YouTube thumbnails & titles with guaranteed view growth. +167% average increase. 10,000+ thumbnails for top creators.">
+    <!-- Open Graph / Social Media Preview -->
+    <meta property="og:title" content="Genial Design | YouTube Thumbnails That Boost Your Views">
+    <meta property="og:description" content="YouTube thumbnails & titles with guaranteed view growth. +167% average increase. 10,000+ thumbnails for top creators.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://genial-design.com">
+    <meta property="og:image" content="https://i.postimg.cc/7Pmmx4yf/image-2025-12-05-05-09-53.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
