Fix flash of Russian content on page load - hide body until translation and counter ready

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
-<body>
+<body style="opacity: 0; transition: opacity 0.3s ease;">
     <!-- Custom Cursor (desktop only) -->
     <div class="cursor" id="cursor"></div>
     <div class="cursor-follower" id="cursor-follower"></div>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="mega-counter-number-wrapper" id="mega-counter-wrapper">
                     <canvas class="mega-counter-fluid" id="mega-fluid-canvas"></canvas>
-                    <div class="mega-counter-number" id="mega-counter-value">852 000 000</div>
+                    <div class="mega-counter-number" id="mega-counter-value"></div>
                 </div>
                 <p class="mega-counter-text">просмотров на видео с обложками от <span class="mega-counter-brand">Genial Design</span></p>
                 <a href="#cta" class="btn btn-primary btn-xl btn-magnetic btn-glow mega-counter-cta" data-magnetic>
