--- a/price.html
+++ b/price.html
@@ -267,7 +267,7 @@
         }
     </style>
 </head>
-<body>
+<body style="opacity: 0; transition: opacity 0.3s ease;">
     <!-- Custom Cursor (desktop only) -->
     <div class="cursor" id="cursor"></div>
     <div class="cursor-follower" id="cursor-follower"></div>
