--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
-<body style="opacity: 0; transition: opacity 0.3s ease;">
+<body>
+    <!-- Loading Screen -->
+    <div class="loading-screen" id="loading-screen">
+        <div class="loader-content">
+            <div class="loader-logo">
+                <img src="https://i.postimg.cc/MTvC92Ng/image-2025-12-05-05-09-53.png" alt="Genial Design" class="loader-logo-img">
+                <div class="loader-logo-text">Genial<span class="accent">Design</span></div>
+            </div>
+            <div class="loader-spinner">
+                <div class="spinner-ring"></div>
+                <div class="spinner-ring"></div>
+                <div class="spinner-ring"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Custom Cursor (desktop only) -->
     <div class="cursor" id="cursor"></div>
     <div class="cursor-follower" id="cursor-follower"></div>
